# lx-ros-basics

workspace/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
workspace/devel/.private/catkin_tools_prebuild/: .catkin
workspace/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
workspace/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
workspace/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
workspace/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
workspace/src/my_package/: CMakeLists.txt  package.xml
