<package>
  <name>my_package</name>
  <version>0.0.1</version>
  <description>
	My first Catkin package in Duckietown.
  </description>
  <maintainer email="kevin.lessard@umontreal.ca">Kevin Lessard</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>